chore: save workspace before segmented WAL write path
Capture the current recovery journal, placement, and input work
before wiring segmented WAL into the live write path.